HelloUltraviolet/Fixtures/RejectedSource/Expressions/IfConditionNonBool/Expected.uv
//! Expected diagnostic metadata for the IfConditionNonBool rejected-source specimen.

expectedDiagnostic("", "diag.16.ControlExpressions")
